force-app-privacy/main/default/objects/Contact/fields/Email_Masked__c.field-meta.xml
<CustomField>
    <fullName>Email_Masked__c</fullName>
    <label>Email (Masked)</label>
    <type>Text</type>
    <formula>IF(
  $Permission.View_Sensitive_Data,
  Email,
  IF(LEN(Email) &gt; 0, LEFT(Email, 1) &amp; &quot;***@***.***&quot;, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>