force-app-privacy/main/default/objects/Contact/fields/MailingCity_Masked__c.field-meta.xml
<CustomField>
    <fullName>MailingCity_Masked__c</fullName>
    <label>Mailing City (Masked)</label>
    <type>Text</type>
    <formula>IF(
  $Permission.View_Sensitive_Data,
  MailingCity,
  &quot;***&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>