force-app-privacy/main/default/objects/Contact/fields/MailingCountry_Masked__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry_Masked__c</fullName>
    <label>Mailing Country (Masked)</label>
    <type>Text</type>
    <formula>IF(
  $Permission.View_Sensitive_Data,
  MailingCountry,
  IF(LEN(MailingCountry) &gt; 0, &quot;***&quot;, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>