force-app-privacy/main/default/objects/Contact/fields/MailingPostalCode_Masked__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalCode_Masked__c</fullName>
    <label>Mailing Postal Code (Masked)</label>
    <type>Text</type>
    <formula>IF(
  $Permission.View_Sensitive_Data,
  MailingPostalCode,
  IF(LEN(MailingPostalCode) &gt; 0, &quot;*****&quot;, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>