force-app-privacy/main/default/objects/Contact/fields/MailingState_Masked__c.field-meta.xml
<CustomField>
    <fullName>MailingState_Masked__c</fullName>
    <label>Mailing State (Masked)</label>
    <type>Text</type>
    <formula>IF(
  $Permission.View_Sensitive_Data,
  MailingState,
  IF(LEN(MailingState) &gt; 0, &quot;**&quot;, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>