force-app-privacy/main/default/objects/Contact/fields/MailingStreet_Masked__c.field-meta.xml
<CustomField>
    <fullName>MailingStreet_Masked__c</fullName>
    <label>Mailing Street (Masked)</label>
    <type>Text</type>
    <formula>IF(
  $Permission.View_Sensitive_Data,
  MailingStreet,
  &quot;*** Masked Address ***&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>