force-app-privacy/main/default/objects/Contact/fields/Name_Masked__c.field-meta.xml
<CustomField>
    <fullName>Name_Masked__c</fullName>
    <label>Name (Masked)</label>
    <type>Text</type>
    <formula>IF(
  $Permission.View_Sensitive_Data,
  IF(ISBLANK(FirstName), LastName, FirstName &amp; &quot; &quot; &amp; LastName),
  IF(NOT(ISBLANK(FirstName)),
    LEFT(FirstName, 1) &amp; &quot;****&quot;,
    IF(LEN(LastName) &gt; 1, LEFT(LastName, 1) &amp; &quot;****&quot;, &quot;****&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>